# dwdhandler

./: .gitignore  README.md  pyproject.toml  setup.cfg
examples/: dwd_download_kl.py  dwd_download_station_template.py
src/dwdhandler/: __init__.py  dow_handler.py
src/dwdhandler/calculation/: calc_stats.py  geo.py
src/dwdhandler/constants/: constpar.py  filedata.py  serverdata.py
src/dwdhandler/helper/: ftp.py  hfunctions.py  postgres.py
src/dwdhandler/plotting/: plotconstr.py
