[metadata]
name = dwdhandler-mrtscha
version = 0.0.9
author = Tobias Schad
author_email = tobias.schad@googlemail.com
description = Package to handle data from German Weather Service and some simple plotting routines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrTscha/dwdhandler
project_urls =
    Bug Tracker = https://github.com/MrTscha/dwdhandler/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires= 
    numpy 
    pandas
    datetime
    pysqlite3
    seaborn
    matplotlib

[options.packages.find]
where = src
